<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_e_mail">Correo</string>
    <string name="label_password">Password</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_btn_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="Nombre" />
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_btn_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Registrar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_speciality">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_schedule_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita médica %1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_schedule_time">Hora de cita médica</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialties">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrió un problema al cargar las médicos</string>
    <string name="error_loading_hours">No se han podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y fecha, para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">No seencontraron horas disponibles para el médico en el día seleccionado.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un usuario y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_appointment_created_at">Esta cita se registro el día %1$s con la siguiente descripción</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointment_error">Ocurrió un error inesperado registrando la cita médica</string>
    <string name="label_password_confirmation">Confirmar clave</string>
    <string name="error_register_empty_fields">Por favor complete todos los campos</string>
    <string name="error_register_passwords_do_not_match">Las credenciales no coinciden</string>
    <string name="error_register_validation">Ocurrió un error en el registro</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="btn_edit_profile">Editar perfil</string>
    <string name="label_edit_profile">Editar datos básicos</string>
    <string name="label_phone">Número de teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="profile_success_message">Los cambios se han guardado correctamente</string>
    <string name="error_profile_name">El nombre ingresado es demasiado corto</string>
    <string name="you_need_a_phone">Es necesario primero asociar un teléfono a tu cuenta</string>
</resources>