<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"

    android:gravity="center"
    android:padding="16dp"

    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:height="60dp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/label_welcome"/>

    <LinearLayout
        android:paddingTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_add_circle"
            style="@style/MenuButton"
            android:text="@string/btn_create_appointment" />

        <Button
            android:id="@+id/btnMyAppointments"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_schedule"
            style="@style/MenuButton"
            android:text="@string/btn_my_appointments" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_power_off"
            style="@style/MenuButton"
            android:text="@string/btn_log_out" />

    </LinearLayout>

</LinearLayout>