<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/cvStep2"
    android:visibility="gone"
    tools:visibility="visible"
    app:contentPadding="12dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="8dp"
                android:text="@string/label_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="8dp"
                android:text="@string/label_schedule_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etScheduledDate"
                android:onClick="onClickScheduledDate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvSelectDoctorAndDate"
                android:textColor="@color/colorAccent"
                android:layout_margin="6dp"
                android:text="Seleccione un médico y fecha, para ver sus horas disponibles."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvNotAvailableHours"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="6dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="No seencontraron horas disponibles para el médico en el día seleccionado."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/radioGroupLeft"
                    android:orientation="vertical">
                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"/>
                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/radioGroupRight"
                    android:orientation="vertical">
                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM"/>
                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:30 AM"/>
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnNext2"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_check"
                style="@style/MenuButton"
                android:text="@string/btn_next"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.cardview.widget.CardView>